# CrafterFOSS

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: privacy_policy.md
src/: app.py  main.py  routes.py
src/components/: perms_manager.py
src/components/custom_controls/: __init__.py  gif_ui_container.py  hex_textfield.py  nums_textfield.py  other_controls.py  process_dialog.py
src/controllers/: click_handler.py  craft_handler.py  event_handler.py  gif_ui_builder.py  install_handler.py
src/models/: app_info.py  gif.py
src/services/: animation_builder.py
src/utils/: extras.py
src/views/: about_view.py  craft_layout.py  help_view.py  home_view.py  install_layout.py  settings_view.py
